Change error to actual template.

--- a/blood/templates/donation_received.html
+++ b/blood/templates/donation_received.html
@@ -3,7 +3,7 @@
 
 {% block title %} - Donation received{% endblock %}
 {% block content %}
-    <h1 class="mt-5">Donation received</h1>
+    <h1 class="mt-5 alert alert-success">Donation received</h1>
     <table class="table">
         <thead>
         <tr>
