--- a/blood/templates/mci_request_complete.html
+++ b/blood/templates/mci_request_complete.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %} - Single request complete{% endblock %}
+{% block title %} - MCI request complete{% endblock %}
 {% block content %}
-    <h1 class="mt-5">Single Request Complete</h1>
+    <h1 class="mt-5 alert alert-success">MCI Request Complete</h1>
 
     <h2 class="mt-4">Request:</h2>
 
