--- a/blood/templates/single_request_complete.html
+++ b/blood/templates/single_request_complete.html
@@ -3,7 +3,7 @@
 
 {% block title %} - Single request complete{% endblock %}
 {% block content %}
-    <h1 class="mt-5">Single Request Complete</h1>
+    <h1 class="mt-5 alert alert-success">Single Request Complete</h1>
 
     <h2 class="mt-4">Request:</h2>
 
