--- a/blood/templates/single_request.html
+++ b/blood/templates/single_request.html
@@ -3,7 +3,7 @@
 
 {% block title %} - Add donation{% endblock %}
 {% block content %}
-    <h1 class="mt-5">Add donation</h1>
+    <h1 class="mt-5">Patient details:</h1>
     ID Number: {{ id_number }}
 
     <form method="post" action="{% url 'single_request' id_number=id_number %}">
