--- a/templates/base.html
+++ b/templates/base.html
@@ -22,12 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a
-                                class="nav-link active"
-                                aria-current="page"
-                                href="{% url 'donation_start' %}">
-                            Donation
-                        </a>
+                        <a class="nav-link" href="{% url 'donation_start' %}">Donation</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'single_request_start' %}">Single
@@ -35,6 +30,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'mci_request' %}">MCI request</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'outstanding' %}">Outstanding</a>
                     </li>
 
                 </ul>
